# DNH

./: Decision Tree.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  ci.yml
benchmark/: RESUMEN.md  bench_fit.py
examples/: quickstart.py
src/dnhdt/: _criterion.c  _criterion.pxd  _criterion.pyx  _criterion_py.py  estimators.py
tests/: conftest.py  test_criterion.py  test_forest.py  test_oblique.py  test_tree.py
