[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "numpy>=1.21",
]
build-backend = "setuptools.build_meta"

[project]
name = "dnhdt"
dynamic = ["version"]
description = "DNH-DT: Decision Trees with Non-Homogeneous Distribution Criterion"
readme = "README.md"
license = "MIT"
authors = [{ name = "David Cortés", email = "david@example.com" }]
keywords = ["machine learning", "decision tree", "oblique tree", "random forest", "DNH"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-benchmark",
    "cython>=3.0",
    "numpy>=1.21",
]
bench = [
    "matplotlib",
    "pandas",
    "memory_profiler",
]

[project.urls]
Homepage = "https://github.com/DavidCortes/dnhdt"
Repository = "https://github.com/DavidCortes/dnhdt"
Issues = "https://github.com/DavidCortes/dnhdt/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "dnhdt._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
